Perf: Use xpath for faster access
100x faster